workspace = { members = ["crates/pki", "crates/secoxide_agent", "crates/secoxide_api", "crates/secoxide_crypto", "crates/secoxide_db"] }
[package]
name = "secoxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
