[package]
name = "secoxide_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duct = "0.13.7"


[dependencies.tracing]
version = "0.1.40"


[dependencies.tracing-subscriber]
version = "0.3.18"

[dependencies.clap]
version = "4.5.2"
features = ["cargo", "color", "wrap_help", "unicode", "usage", "suggestions", "derive", "debug", "env", "error-context", "help", "string"]

